manifests/infrastructure/openobserve/namespace.yaml
# manifests/infrastructure/openobserve/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openobserve
  labels:
    pod-security.kubernetes.io/enforce: privileged
